# Mycoforge-Slicer

./: .gitattributes  .gitignore  PROJECT_RULES.md  README.md  package.json  pyproject.toml  release.ps1
.github/workflows/: release.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
docs/: MYCOFORGE_CHANGELOG.md  MYCOFORGE_NOZZLE_WORKFLOW.md  architecture.md  gcode_rules.md  moonraker_setup.md  pastendruck_findings.md  plan.md  retraction_model.md
klipper/: myco_queue_sync_experimental.cfg.disabled  myco_state.cfg
profiles/materials/: calibration_paste.json  clay_default.json  mycelium_default.json
profiles/printers/: mycoforge_2040.json
profiles/slicer/: prusaslicer_mycoforge.ini
release_tools/: prepare-orca-vendor.mjs  release-mycoforge.mjs  verify-release-version.mjs
tests/: test_bed_volume_sync.py  test_calibration_gcode.py  test_extrusion_math.py  test_flow_normalizer.py  test_gcode_parser.py  test_klipper_templates.py  test_layout_transform.py  test_moonraker_client.py  test_nozzle_sync.py  test_paste_contract.py  test_retraction_translator.py  test_short_extrusion_filter.py  test_slice_process.py  test_slicer_manager.py  test_slicer_runner.py
tests/fixtures/: cura_style.gcode  relative_retract.gcode  retract_travel_prime.gcode  simple_line.gcode
tools/: mycoforge_gcode_validate.py  mycoforge_nozzle_query.py  mycoforge_orca_prepare.py
tools/klipper_migration/: apply_nozzle_sync.py
tools/mycoforge_cli/: __init__.py  bed_volume_sync.py  calibration_gcode.py  extrusion_math.py  flow_normalizer.py  gcode_parser.py  (+11 more)
(+80 files in other folders)
