[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycoforge-studio"
version = "0.1.1"
description = "CLI and desktop shell for Mycoforge G-code postprocessing and Moonraker upload."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "typer>=0.12",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
mycoforge = "mycoforge_cli.main:app"

[tool.setuptools.packages.find]
where = ["tools"]

[tool.pytest.ini_options]
pythonpath = ["tools"]
testpaths = ["tests"]
